--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       {
         "src": "/fetchWebsite",
         "dest": "server.js",
-        "methods": ["GET"],
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers": {
           "Access-Control-Allow-Origin": "*"
         }
